tests/sumo/meso/junction_control/tls_coordination/bad/control.limited/output.sumo.meso
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading done.
Simulation version v1_5_0+0174-0b4d252505 started with time: 0.00
Simulation ended at time: 107.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 5ms
 Real time factor: 21400
 UPS: 176000.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Speed: 10.53
 Duration: 29.33
 WaitingTime: 0.47
 TimeLoss: 7.26
 DepartDelay: 0.00

